==> zephyrproject-rtos/trusted-firmware-m/platform/ext/target/nordic_nrf/common/core/tfm_hal_isolation.c <==
#include <arm_cmse.h>
#include "tfm_hal_device_header.h"
#include "mpu_armv8m_drv.h"
#include "region.h"
#include "spu.h"
#include "target_cfg.h"
#include "tfm_hal_isolation.h"
#include "mmio_defs.h"
#include "array.h"
#include "load/spm_load_api.h"
#define PROT_BOUNDARY_VAL \
    ((1U << HANDLE_ATTR_PRIV_POS) & HANDLE_ATTR_PRIV_MASK)

enum tfm_hal_status_t tfm_hal_set_up_static_boundaries(
                                            uintptr_t *p_spm_boundary)
{
    /* Set up isolation boundaries between SPE and NSPE */
    sau_and_idau_cfg();

#if NRF_SPU_HAS_MEMORY
    if (spu_init_cfg() != TFM_PLAT_ERR_SUCCESS) {
        return TFM_HAL_ERROR_GENERIC;
    }
#else
    /* If the SPU doesn't configure MEMORY on this platform then the NRF_MPC does */
    if (nrf_mpc_init_cfg() != TFM_PLAT_ERR_SUCCESS) {
        return TFM_HAL_ERROR_GENERIC;
    }
#endif

    if (spu_periph_init_cfg() != TFM_PLAT_ERR_SUCCESS) {
        return TFM_HAL_ERROR_GENERIC;
    }

    if (mpu_init_cfg() != TFM_HAL_SUCCESS) {
        return TFM_HAL_ERROR_GENERIC;
    }

    *p_spm_boundary = (uintptr_t)PROT_BOUNDARY_VAL;

    return TFM_HAL_SUCCESS;
}

enum tfm_hal_status_t
tfm_hal_bind_boundary(const struct partition_load_info_t *p_ldinf,
                        uintptr_t *p_boundary)
{
    if (!p_ldinf || !p_boundary) {
        return TFM_HAL_ERROR_GENERIC;
    }

    bool privileged;
    bool ns_agent;
    uint32_t partition_attrs = 0;

#if TFM_ISOLATION_LEVEL == 1
    privileged = true;
#else
    privileged = IS_PSA_ROT(p_ldinf);
#endif

    ns_agent = IS_NS_AGENT(p_ldinf);
    partition_attrs = ((uint32_t)privileged << HANDLE_ATTR_PRIV_POS) &
                    HANDLE_ATTR_PRIV_MASK;
    partition_attrs |= ((uint32_t)ns_agent << HANDLE_ATTR_NS_POS) &
                        HANDLE_ATTR_NS_MASK;
    *p_boundary = (uintptr_t)partition_attrs;

    for (uint32_t i = 0; i < p_ldinf->nassets; i++) {
        const struct asset_desc_t *p_asset =
                LOAD_INFO_ASSET(p_ldinf);

        if (!(p_asset[i].attr & ASSET_ATTR_NAMED_MMIO)) {
            // Skip numbered MMIO. NB: Need to add validation if it
            // becomes supported. Should we return an error instead?
            continue;
        }

        bool found = false;
        for (uint32_t j = 0; j < ARRAY_SIZE(partition_named_mmio_list); j++) {
            if (partition_named_mmio_list[j] == p_asset[i].dev.dev_ref) {
                found = true;
                break;
            }
        }

        if (!found) {
            /* The MMIO asset is not in the allowed list of platform. */
            return TFM_HAL_ERROR_GENERIC;
        }

        /* Assume PPC & MPC settings are required even under level 1 */
        struct platform_data_t *plat_data_ptr =
                (struct platform_data_t *)p_asset[i].dev.dev_ref;

        if (plat_data_ptr->periph_start == 0) {
            // Should we return an error instead?
            continue;
        }

        spu_peripheral_config_secure(plat_data_ptr->periph_start,
                                     SPU_LOCK_CONF_LOCKED);

        /*
         * Static boundaries are set. Set up MPU region for MMIO.
         * Setup regions for unprivileged assets only.
         */
        if (!privileged) {
            struct mpu_armv8m_region_cfg_t localcfg;

            localcfg.region_nr = n_configured_regions++;

            localcfg.region_base = plat_data_ptr->periph_start;
            localcfg.region_limit = plat_data_ptr->periph_limit;
            localcfg.region_attridx = MPU_ARMV8M_MAIR_ATTR_DEVICE_IDX;
            localcfg.attr_access = MPU_ARMV8M_AP_RW_PRIV_UNPRIV;
            localcfg.attr_sh = MPU_ARMV8M_SH_NONE;
            localcfg.attr_exec = MPU_ARMV8M_XN_EXEC_NEVER;

            enum mpu_armv8m_error_t err =
                    mpu_armv8m_region_enable(&dev_mpu_s, &localcfg);

            if (err != MPU_ARMV8M_OK) {
                return TFM_HAL_ERROR_GENERIC;
            }
        }
    }

    return TFM_HAL_SUCCESS;
}
